# docs

./: .gitignore  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
content/: 01_home.md
content/03_setup/: 01_installation.md
docs/: 404.html  index.html  sitemap.xml
docs/search/: search_index.json
documentation/: 01_home.md
documentation/.obsidian/: community-plugins.json  hotkeys.json
documentation/.smart-env/: smart_env.json
documentation/01_account-settings/: 01_connecting-social-media-accounts.md  02_enabling-ftp-service.md  03_setting-email-notifications.md  04_setting-up-default-content.md  05_updating-user-information.md  06_using-ftp-clients.md  README.md
documentation/02_player-installation/: 01_video-playback-decoder.md  README.md
documentation/04_apps/: 01_applying-transparent-background.md  02_creating-an-app.md  03_what-is-an-app.md  README.md
documentation/05_audio-content/: 01_using-audio-announcement-app.md  02_using-audio-ducking.md  03_using-audio-files.md  README.md
documentation/06_bandwidth-consumption/: 01_player-bandwidth-consumption.md  02_player-data-saving-options.md  README.md
documentation/07_basic-dashboard-operations/: 01_connecting-app-to-dashboard.md  02_deleting-a-player.md  03_signing-out-from-app.md  04_renaming-a-screen.md  README.md
documentation/07_basic-player-operations/: 01_connecting-a-player.md  02_deleting-a-player.md  03_detaching-hardware-device.md  04_renaming-a-player.md  05_replacing-a-hardware-device.md  README.md
documentation/08_basics-playlist/: 01_add-restrictions-to-playlists.md  (+7 more)
(+874 files in other folders)
