[tool.poetry]
name = "mkdocs-digi"
version = "1.0"
description = "Digisigns Digital Signage documentation"
authors = ["Digisigns Team"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
yamllint = "^1.35.1"
mkdocs-publisher = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
